Displaying problem on screen

--- a/index.html
+++ b/index.html
@@ -37,17 +37,34 @@
             </div>
 
             <div class="console-viewport">
-                <div id="row-top">
-
-                </div>
-                <div id="row-bottom">
-
-                </div>
-                <div id="row-separator">
-
-                </div>
-                <div id="row-total">
-                    
+                <div id="problem-viewport">
+                    <div id="row-top" class="problem">
+                        <div id="blank" class="problem-column"></div>
+                        <div id="top0" class="problem-column"></div>
+                        <div id="top1" class="problem-column"></div>
+                        <div id="top2" class="problem-column"></div>
+                        <div id="top3" class="problem-column"></div>
+                        <div id="top4" class="problem-column"></div>
+                    </div>
+                    <div id="row-bottom" class="problem">
+                        <div id="op" class="problem-column"></div>
+                        <div id="btm0" class="problem-column"></div>
+                        <div id="btm1" class="problem-column"></div>
+                        <div id="btm2" class="problem-column"></div>
+                        <div id="btm3" class="problem-column"></div>
+                        <div id="btm4" class="problem-column"></div>
+                    </div>
+                    <div id="row-separator">
+                        <div id="line0" class="problem-line"></div>
+                    </div>
+                    <div id="row-solution" class="problem">
+                        <div id="sol0" class="problem-column"></div>
+                        <div id="sol1" class="problem-column"></div>
+                        <div id="sol2" class="problem-column"></div>
+                        <div id="sol3" class="problem-column"></div>
+                        <div id="sol4" class="problem-column"></div>
+                        <div id="sol5" class="problem-column"></div>
+                    </div>
                 </div>
             </div>
 
