Screen and Keyboard Inputs Working

--- a/index.html
+++ b/index.html
@@ -108,12 +108,17 @@
                     </div>
                 </div>
             </div>
+
+            <div id="result-banner">
+                <p id="result-tag"></p>
+            </div>
         </figure>
     </section>
 
     <footer id="main-footer">
         <p>
-            <span>Background photo by <a href="https://unsplash.com/@lazycreekimages?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Michael Dziedzic</a> on <a href="https://unsplash.com/s/photos/circuit?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+            <!-- <span>Background photo by <a href="https://unsplash.com/@lazycreekimages?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Michael Dziedzic</a> on <a href="https://unsplash.com/s/photos/circuit?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span> -->
+            <span>Background photo by Michael Dziedzic on Unsplash</span>
         </p>    
     </footer>
 
