Added pointer-events to number tags

--- a/index.html
+++ b/index.html
@@ -71,40 +71,40 @@
             <div class="console-interface">
                 <div class="console-keypad">
                     <div class="interface-button" id="interface-1" data-number="1">
-                        <p>1</p>
+                        <p class="click-through">1</p>
                     </div>
                     <div class="interface-button" id="interface-2" data-number="2">
-                        <p>2</p>
+                        <p class="click-through">2</p>
                     </div>
                     <div class="interface-button" id="interface-3" data-number="3">
-                        <p>3</p>
+                        <p class="click-through">3</p>
                     </div>
                     <div class="interface-button" id="interface-4" data-number="4">
-                        <p>4</p>
+                        <p class="click-through">4</p>
                     </div>
                     <div class="interface-button" id="interface-5" data-number="5">
-                        <p>5</p>
+                        <p class="click-through">5</p>
                     </div>
                     <div class="interface-button" id="interface-6" data-number="6">
-                        <p>6</p>
+                        <p class="click-through">6</p>
                     </div>
                     <div class="interface-button" id="interface-7" data-number="7">
-                        <p>7</p>
+                        <p class="click-through">7</p>
                     </div>
                     <div class="interface-button" id="interface-8" data-number="8">
-                        <p>8</p>
+                        <p class="click-through">8</p>
                     </div>
                     <div class="interface-button" id="interface-9" data-number="9">
-                        <p>9</p>
+                        <p class="click-through">9</p>
                     </div>
                     <div class="interface-button" id="interface-0" data-number="0">
-                        <p>0</p>
+                        <p class="click-through">0</p>
                     </div>
                     <div class="interface-button" id="interface-C" data-number="C">
-                        <p>C</p>
+                        <p class="click-through">C</p>
                     </div>
                     <div class="interface-button" id="interface-E" data-number="E">
-                        <p>↵</p>
+                        <p class="click-through">↵</p>
                     </div>
                 </div>
             </div>
