--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
                 </div>
             </div>
 
+            <div class="console-timer">
+                <p id="timer-counter"></p>
+            </div>
+
             <div class="console-interface">
                 <div class="console-keypad">
                     <div class="interface-button" id="interface-1" data-number="1">
